Bug 356863. Right-hand account settings panels are not accessible. Patch by Evan.Yan@sun.com. r=aaronleventhal.